--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, body {height: 100%;display: flex;
+  justify-content: center;
+  align-items: center;}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
