--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
-html, body {height: 100%;display: flex;
+html, body {
+  height: 100%;
+  display: flex;
   justify-content: center;
-  align-items: center;}
+  /* padding-top: 100px; */
+  /* align-items: center; */
+}
 
 body {
   margin: 0;
